force-app/main/default/objects/torihikiHead__c/torihikiHead__c.object-meta.xml
<CustomObject>
    <description>取引一覧データテーブル</description>
    <label>取引ヘッダ</label>
    <nameField>
        <displayFormat>YYYYMMDD-{0}</displayFormat>
        <label>取引番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>