force-app/main/default/objects/torihikiHead__c/fields/comment__c.field-meta.xml
<CustomField>
    <fullName>comment__c</fullName>
    <inlineHelpText>招待、会議など出費が発生した場合、概要を入力してください。</inlineHelpText>
    <label>概要</label>
    <length>80</length>
    <type>Text</type>
</CustomField>