force-app/main/default/objects/torihikiHead__c/fields/kanriNmu__c.field-meta.xml
<CustomField>
    <fullName>kanriNmu__c</fullName>
    <description>請求書などに使う項目です。</description>
    <inlineHelpText>請求書などに使う項目です。</inlineHelpText>
    <label>管理番号</label>
    <length>80</length>
    <type>Text</type>
</CustomField>