force-app/main/default/objects/torihikiHead__c/fields/shainCd__c.field-meta.xml
<CustomField>
    <fullName>shainCd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社員マスタ</label>
    <referenceTo>Employee1__c</referenceTo>
    <relationshipLabel>取引ヘッダ</relationshipLabel>
    <relationshipName>shaincd</relationshipName>
    <type>Lookup</type>
</CustomField>