force-app/main/default/objects/torihikiHead__c/fields/shiharaiDate__c.field-meta.xml
<CustomField>
    <fullName>shiharaiDate__c</fullName>
    <inlineHelpText>決済日を入力してください。</inlineHelpText>
    <label>支払期日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>