force-app/main/default/objects/torihikiHead__c/fields/shusiKubun__c.field-meta.xml
<CustomField>
    <fullName>shusiKubun__c</fullName>
    <description>収入支出区分</description>
    <inlineHelpText>収入支出区分を選択してください。</inlineHelpText>
    <label>収入支出区分</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>支出</fullName>
                <default>true</default>
                <label>支出</label>
            </value>
            <value>
                <fullName>収入</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>