force-app/main/default/objects/torihikiHead__c/fields/torihikiDate__c.field-meta.xml
<CustomField>
    <fullName>torihikiDate__c</fullName>
    <inlineHelpText>取引日を入力してください。</inlineHelpText>
    <label>取引日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>