force-app/main/default/objects/torihikiHead__c/fields/torihikisakiCd__c.field-meta.xml
<CustomField>
    <fullName>torihikisakiCd__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>取引先を入力してください。</inlineHelpText>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引ヘッダ</relationshipLabel>
    <relationshipName>tradeList_Account</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>